--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Abdubek</title>
+  <style>
+   * {
+     font-family: sans-serif;
+    }
+  </style>
 </head>
 <body>
   <h1>Hi there 👋</h1>
