--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <title>Abdubek</title>
   <style>
+    body {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
    * {
      font-family: sans-serif;
     }
@@ -11,5 +17,8 @@
 </head>
 <body>
   <h1>Hi there 👋</h1>
+  <p>My name is Abdubek</p>
+  <p>I am a frontend developer</p>
+  <p>Telegram: <a href="https://t.me/Abdubek" target="_blank">@Abdubek</a></p>
 </body>
 </html>
