--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      flex-direction: column;
     }
    * {
      font-family: sans-serif;
