--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-  <h1>Hi there 👋</h1>
+  <p>Hi there 👋</p>
   <p>My name is Abdubek</p>
   <p>I am a frontend developer</p>
   <p>Telegram: <a href="https://t.me/Abdubek" target="_blank">@Abdubek</a></p>
