--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <body>
   <p>Hi there 👋</p>
   <p>My name is Abdubek</p>
-  <p>I am a frontend developer</p>
+  <p>I am a Frontend Developer</p>
   <p>Telegram: <a href="https://t.me/Abdubek" target="_blank">@Abdubek</a></p>
+  <p>Linkedin: <a href="https://www.linkedin.com/in/abdubek/" target="_blank">@abdubek</a></p>
 </body>
 </html>
